Corrects z-indexing of header, nav and settings

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ header {
     height: 65px;
     width: 100%;
     background-color: #000;
-    z-index: 10;
+    z-index: 15;
     transition: top 0.2s ease-in-out;
     -webkit-box-shadow: 0px 3px 5px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 5px -2px rgba(0,0,0,0.75);
@@ -125,7 +125,7 @@ nav {
     width: 100vw;
     min-height: calc(100vh - 130px);
     padding: 0 0 65px 0;
-    z-index: 200;
+    z-index: 13;
 }
 
 #settings h3 {
